--- a/Project/src/main/webapp/WEB-INF/web.xml
+++ b/Project/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/spring/root-context.xml</param-value>
+    <param-value>
+    /WEB-INF/spring/root-context.xml
+    </param-value>
   </context-param>
+  
+  
+  
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
   <servlet>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -16,10 +23,12 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
   <filter>
     <filter-name>charEncoding</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -39,6 +48,7 @@
     <servlet-name>ContentMapper</servlet-name>
     <servlet-class>mappers.ContentMapper</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>ContentMapper</servlet-name>
     <url-pattern>/ContentMapper</url-pattern>
@@ -50,6 +60,7 @@
     <servlet-name>MemberMapper</servlet-name>
     <servlet-class>mappers.MemberMapper</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>MemberMapper</servlet-name>
     <url-pattern>/MemberMapper</url-pattern>
